# nussinov-zuker-crispr

./: .gitattributes  .gitignore  ANALYSIS.md  GITHUB_PAGES_SETUP.md  LICENSE  README.md  README_RNA_CRISPR_PROJECT.md  app.js  crispr_nussinov_analysis.py  index.html  make_figures.py  nussinov.py  pyproject.toml  styles.css  test_nussinov.py
data/: guide_examples.json  guides.json  model.json  references.json  vienna.json
docs/: index.html
docs/js/: rna-fold.js  viewer3d.js
js/: app.js  chapters.js  guide-tools.js  hero.js  rna-fold.js  viewer3d.js
